style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');

body {
  font-family: 'Poppins', sans-serif;
  margin: 0;
}

main {
  background: #f7f7f9;
}

button:enabled {
  background: none;
  color: #396df2;
}

button:hover {
  background: #5161f1;
  color: white;
}

button:active {
  background: #081dda;
  color: white;
}

button:disabled {
  background: #ebebff;
  color: black;
}

header {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 20px 30px;
  background-color: #fff;
}

.header-logo {
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 20px;
  color: #5161f1;
  text-decoration: none;
  transition: transform 1s;
}

.header-logo:hover {
  transform: scale(1.7);
}

.only-mobile {
  display: block;
}

.only-desktop {
  display: none;
}

#headline-section {
  background: url("./Images/header-shapes-mobile@2x.svg");
  background-repeat: no-repeat;
  background-size: cover;
  padding: 100px 50px 50px 50px;
  background-color: #fff;
  border-bottom-left-radius: 20%;
}

#headline-section h2 {
  font-weight: 700;
  font-size: 40px;
  color: #172b4d;
  line-height: 52px;
}

.work-description p {
  color: #344563;
  margin-top: -5px;
  font-size: 15px;
  font-weight: normal;
}

.headline-text {
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  margin-top: -20px;
  color: #344563;
}

nav ul {
  display: flex;
  list-style: none;
}

nav ul li {
  padding: 0 30px;
}

.flex {
  display: flex;
  flex-direction: column;
}

.social-media-icons ul {
  display: flex;
  justify-content: flex-start;
  padding-left: 0;
  padding-right: 14px;
  margin-top: -5px;
}

.social-media-icons li {
  list-style: none;
  padding-right: 20px;
}

#work-section {
  display: grid;
}

.work-container {
  display: flex;
  background: white;
  margin: 150px 20px 0 20px;
  border: 1px solid #dfe1e6;
  box-sizing: border-box;
  border-radius: 16px;
  padding: 23px;
}

.work-img img {
  width: 100%;
  height: 220px;
  border-radius: 8px;
}

.work-img:hover {
  transition: transform 0.75s;
  transform: scale(1.07);
}

#work-section h2 {
  margin: 0;
}

.client-des {
  display: flex;
  margin-top: -7px;
}

.client-des ul {
  padding: 0;
  padding-right: 25px;
  font-size: 13px;
  color: #7a869a;
}

.client-name li {
  list-style: none;
  color: #344563;
  font-size: 14px;
}

.buttons {
  padding: 0;
}

.buttons button {
  background: #ebebff;
  border-radius: 8px;
  border: none;
  padding: 4px 12px;
  color: #3446e5;
  font-weight: 500;
  font-size: 13px;
  line-height: 16px;
}

.buttons li {
  list-style: none;
  display: inline;
}

.see-project-btn {
  padding: 12px;
  border-radius: 8px;
  top: calc(50% - 48px / 2);
  background: none;
  color: #396df2;
  border: 1px solid #396df2;
  font-weight: 400;
  font-size: 15px;
  margin-top: 0;
  width: 110px;
}

.get-my-resume-btn {
  padding: 12px;
  border-radius: 8px;
  top: calc(50% - 48px / 2);
  background: none;
  color: #396df2;
  border: 1px solid #396df2;
  font-weight: 400;
  font-size: 15px;
  margin-top: 0;
  width: 130px;
}

#about-section {
  background: white;
  background-repeat: no-repeat;
  background-size: contain;
  padding: 115px 45px 110px 45px;
  border-top-right-radius: 78px;
}

#about-section h2 {
  font-weight: 700;
  font-size: 50px;
  color: #172b4d;
  line-height: 52px;
  margin-top: 0;
}

#about-section .social-media-icons {
  padding-left: 11px;
}

.let-connect {
  color: #7f8cff;
}

.language {
  display: flex;
  justify-content: space-between;
  padding: 10px;
}

.categories li {
  list-style: none;
}

.categories {
  padding: 0;
}

.categories ul {
  padding: 0;
}

.categories button {
  width: 100%;
  display: flex;
  height: 67px;
  align-items: center;
  font-size: 15px;
  font-weight: 500;
  color: #253858;
  background: #f7f7f9;
  border: none;
  border-radius: 9px;
  margin-bottom: 10px;
}

.categories button:hover {
  background: #ebebff;
}

.categories img {
  padding: 9px 16px 9px 2px;
}

#contact-form {
  display: flex;
  flex-direction: column;
  background: url("./Images/contact-form-shapes-mobile.svg");
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #5161f1;
  padding: 90px 50px;
  border-top-left-radius: 20%;
  text-align: center;
}

.form {
  display: flex;
  flex-direction: column;
  gap: 18px;
}

.contact-text {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#contact-form h2 {
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  color: white;
  margin-bottom: 15px;
}

#contact-form p {
  font-style: normal;
  font-weight: lighter;
  font-size: 20px;
  line-height: 28px;
  color: #fff;
  margin-top: 0;
  max-width: 400px;
}

form input {
  font-size: 17px;
  line-height: 20px;
  border-radius: 8px;
  border: none;
  padding: 15px 38px 15px 16px;
}

form textarea {
  border-radius: 8px;
  border: none;
  padding: 15px 38px 15px 16px;
  color: #b3bac5;
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
  line-height: 24px;
}

#contact-form form button:enabled {
  height: 48px;
  width: 130px;
  background: white;
  border-radius: 8px;
  border: none;
  padding: 12px 16px;
  color: #5161f1;
  font-weight: 500;
  font-size: 15px;
  line-height: 16px;
}

#contact-form form button:hover {
  background: #5161f1;
  color: white;
}

#contact-form form button:active {
  background: #081dda;
  color: white;
}

#contact-form form button:disabled {
  background: #ebebff;
  color: black;
}

@media screen and (min-width: 995px) {
  #headline-section {
    background: url("./Images/Header-bg@2x.svg");
    background-repeat: no-repeat;
    background-size: contain;
    height: 70vh;
    padding: 160px 150px 90px 130px;
    text-align: left;
    border-bottom-left-radius: 20%;
    background-color: #fff;
  }

  #contact-form {
    background: url("./Images/contact-form-desktop-bg-shapes@2x.svg");
    background-repeat: no-repeat;
    background-size: contain;
    background-color: #5161f1;
    padding: 90px 150px;
    border-top-left-radius: 20%;
  }

  .only-mobile {
    display: none;
  }

  .only-desktop {
    display: block;
  }

  .menu-bar {
    display: flex;
  }

  .footer {
    display: none;
  }

  #work-section {
    padding: 50px 80px;
  }

  .work-container {
    flex: 1;
    margin: 50px;
  }

  .work-img {
    flex: 0.5;
    display: flex;
    transition: transform 1s;
  }

  .work-img:hover {
    transform: scale(1.07);
  }

  .work-description {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 0.5;
    padding-left: 15px;
  }

  .flex {
    flex-direction: row;
  }

  .row-reverse {
    flex-direction: row-reverse;
  }

  .work-img img {
    object-fit: cover;
  }

  .about-section-text {
    padding: 10px 60px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 0.5;
  }

  .about-section-skill {
    padding-right: 30px;
    flex: 0.5;
  }

  .about-lang-skills {
    display: flex;
    gap: 10px;
  }

  .about-lang-skills li button {
    display: flex;
    flex-direction: column;
    height: 110px;
    gap: 10px;
  }

  #contact-form p {
    max-width: 450px;
  }

  .form {
    margin: 20px auto;
  }
}

